# job

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  build.md  docker-compose.yml  jobcodex.db  jobcodex.md  jobgemini.md  portfolio.md  pyproject.toml
.claude/: settings.local.json
_bmad-output/implementation-artifacts/: spec-app-shell-auth.md  spec-application-tracking.md  spec-database-schema.md  spec-job-ingestion.md  spec-job-matching.md  spec-profile-resume-intake.md  spec-tailoring.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
backend/: Dockerfile  config.py  dependencies.py  main.py
backend/api/: __init__.py  alerts.py  applications.py  auth.py  automation.py  bot.py  jobs.py  profile.py  resume.py  sources.py  tailoring.py
backend/db/: base.py
backend/db/migrations/: env.py  script.py.mako
backend/db/models/: __init__.py  alert.py  application.py  artifact.py  audit.py  job.py  match.py  (+5 more)
backend/schemas/: __init__.py  alert.py  application.py  bot.py  matching.py  profile.py  resume.py  source.py  tailoring.py
backend/services/: __init__.py  ai.py  auth.py  bot.py  matching.py  parser.py  portfolio.py  scan.py  scheduler.py  source_seed.py  tailoring.py
frontend/: README.md  index.html  next-env.d.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css
tests/: conftest.py  test_alerts.py  test_applications.py  test_auth.py  test_bot.py  test_ingestion.py  test_matching.py  test_models.py  test_profile.py  test_resume.py  test_sources.py  test_tailoring.py
(+20 files in other folders)
