[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobcodex"
version = "0.1.0"
description = "Job copilot for discovery, matching, tailoring, and tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
